[package]
name = "pizza-analysis-pinyin"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/infinilabs/analysis-pinyin"
categories = ["text-processing"]
keywords = ["pizza", "pinyin", "chinese", "tokenizer", "search"]
authors = ["INFINI Labs Team",]
license = "MIT"
description = "Chinese Pinyin conversion plugin for INFINI Pizza"
build = "build.rs"


[features]
# Default keeps the binary small: only the per-character primary/polyphone
# table (~80 KB) plus the syllable alphabet.
default = []
# Bundle the ~11 MB polyphone phrase dictionary for context-aware
# disambiguation (e.g. `银行` → `yin hang`, not `yin xing`). Opt-in.
polyphone-dict = []
std = ["pizza-engine/std"]

[dependencies]
pizza-common = { path = "../../lib/common" }
pizza-engine = { path = "../../lib/engine", default-features = false }
hashbrown = { version = "0.14", default-features = false }

[dev-dependencies]
